--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.6.7",
+    "bootstrap": "^5.3.2",
+    "sass": "^1.70.0",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
